--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">VK DISK</string>
+    <string name="auth_url">http://10.0.2.2:8000/social/login/vk-oauth2/</string>
+    <string name="redirect_url">https://oauth.vk.com/blank.html</string>
+    <string name="basic_url">http://10.0.2.2:8000</string>
 </resources>
