--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="basic_url">https://vkdisk.faki-mipt.ru/</string>
     <string name="cookie_store">cookie_store</string>
     <string name="cookie">cookie_from_login</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
