--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <!--<string name="basic_url">https://vkdisk.faki-mipt.ru/</string>-->
     <string name="cookie_store">cookie_store</string>
     <string name="cookie">cookie_from_login</string>
+    <string name="csrf">csrf_from_login</string>
+    <string name="pref">PREF</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
