Что-то заработало

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,13 @@
     <string name="auth_url">http://10.0.2.2:8000/social/login/vk-oauth2/</string>
     <!--<string name="auth_url">http://localhost:8080/social/login/vk-oauth2/</string>-->
     <!--<string name="auth_url">https://vkdisk.faki-mipt.ru/social/login/vk-oauth2/</string>-->
+    <!--<string name="auth_url">https://sp4.park.bmstu.cloud/social/login/vk-oauth2/</string>-->
     <!--<string name="redirect_url">https://oauth.vk.com/blank.html</string>-->
     <string name="redirect_url">https://oauth.vk.com/blank.html</string>
     <string name="basic_url">http://10.0.2.2:8000/</string>
     <!--<string name="basic_url">http://localhost:8080/</string>-->
     <!--<string name="basic_url">https://vkdisk.faki-mipt.ru/</string>-->
+    <!--<string name="basic_url">https://sp4.park.bmstu.cloud/</string>-->
     <string name="cookie_store">cookie_store</string>
     <string name="cookie">cookie_from_login</string>
     <string name="csrf">csrf_from_login</string>
