--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="date">DATE</string>
     <string name="cross">CROSS</string>
     <string name="checked">Checked</string>
+    <string name="enter_name">Enter name</string>
 </resources>
